--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,4 @@
-h1 {
-  color: red;
-}
+@import "normalize.scss";
+@import "blocks/fonts.scss";
+@import "blocks/header.scss";
+@import "blocks/about.scss";
