--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,8 @@
 @import "normalize.scss";
+@import "blocks/main.scss";
 @import "blocks/fonts.scss";
 @import "blocks/header.scss";
 @import "blocks/about.scss";
+@import "blocks/select.scss";
+@import "blocks/products.scss";
+@import "blocks/footer.scss";
