--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,6 +1,7 @@
 .about {
   padding-top: 50px;
   position: relative;
+  margin-bottom: 51px;
 
   &::after {
     content: "";
@@ -126,10 +127,6 @@
     font-weight: bold;
     font-size: 18px;
     line-height: 22px;
-  }
-
-  .about__wrapper {
-    // width: 100%;
   }
 
   .about__info {
