--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -48,6 +48,7 @@
 
 .item__price {
   margin-bottom: 12px;
+  text-align: right;
 }
 
 .item__text {
@@ -63,24 +64,28 @@
 
 .item__wrapper {
   display: flex;
+  box-sizing: border-box;
 }
 
 .item__wrapper div {
   min-width: 128px;
-  margin-right: 58px;
+  margin-right: 54px;
 
   &:last-of-type {
     margin-right: 0;
   }
 }
 
+.item__one {
+  box-sizing: border-box;
+  width: 128px;
+  padding-right: 20px;
+  word-wrap: normal;
+}
+
 .item__two p,
 .item__tree p {
   text-align: center;
-}
-
-.item__four p {
-  text-align: right;
 }
 
 .item__four {
