--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -6,7 +6,7 @@
   &::after {
     content: "";
     position: absolute;
-    background-image: url("/img/about.png");
+    background-image: url("../img/about.png");
     background-repeat: no-repeat;
     top: -3px;
     right: -2px;
@@ -83,7 +83,7 @@
     &::after {
       content: "";
       position: absolute;
-      background-image: url("/img/about-tablet.png");
+      background-image: url("../img/about-tablet.png");
       top: -11px;
       right: 12px;
       height: 247px;
@@ -114,7 +114,7 @@
     padding-bottom: 175px;
 
     &::after {
-      background-image: url("/img/about-mobile.png");
+      background-image: url("../img/about-mobile.png");
       width: 59%;
       height: 175px;
       min-width: 209px;
